--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,8 +1,12 @@
-spring:  
+spring:
   datasource:
+    driver-class-name: com.mysql.jdbc.Driver
     password: root
-    username: root
     url: jdbc:mysql://localhost:3306/fornecedor
+    username: root
   jpa:
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    generate-ddl: true
     hibernate:
       ddl-auto: update
+
