--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -12,3 +12,7 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
