--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -7,7 +7,7 @@ spring:
   h2:
     console:
       enabled: true
-      path: /h2-console
+      path: /h2
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
