--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,18 +1,8 @@
-spring:
+spring:  
   datasource:
-    driverClassName: org.h2.Driver
-    password: ''
-    url: jdbc:h2:mem:fornecedor
-    username: sa
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    password: root
+    username: root
+    url: jdbc:mysql://localhost:3306/fornecedor
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
