--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -7,7 +7,7 @@ spring:
     validationQuery: SELECT 1
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
