--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,16 +1,12 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    testWhileIdle: true
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/fornecedor
     username: root
-    validationQuery: SELECT 1
+    password: root  
   jpa:
     hibernate:
-      ddl-auto: update
-      naming:
-        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+      ddl-auto: update   
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
