--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,14 +1,11 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    password: root
-    url: jdbc:mysql://localhost/fornecedor
-    username: root
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
-    show-sql: true
+    url: jdbc:h2:file:~/fornecedor
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
 
