--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,11 +1,10 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
   datasource:
-    url: jdbc:h2:file:~/fornecedor
-    username: sa
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/fornecedor
+    username:
     password:
-    driverClassName: org.h2.Driver
-
+  jpa:
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
